# kore.ai-rag

./: .gitignore  FP_FN_EVALUATION_PLAN.md  PROJECT_EVALUATION_QUESTION_BANK.md  README.md  TECHNICAL_DESIGN_DOCUMENT.html
backend/: env.example  main.py  pyproject.toml  scraper.py
backend/app/: config.py  llm.py
backend/app/agent/: graph.py  state.py  tools.py
backend/app/ingestion/: chunker.py  embedder.py  loader.py
backend/app/models/: schemas.py
backend/app/retrieval/: retriever.py
evaluation_outputs/: README.md  rag_failure_analysis.md  rag_test_results_by_question.md  rag_test_results_detailed.csv  rag_test_results_detailed.json  rag_test_results_summary.md
frontend/: vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Chatinput.jsx  Messagebubble.jsx  Reasoningpanel.jsx  Sourcepanel.jsx
scripts/: extract_test_questions.py  run_rag_evaluation.py  score_rag_responses.py
